# isodata

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
electricity/: __init__.py  caiso.py
isodata/: __init__.py  caiso.py
{{{PACKAGE}}}/: __init__.py
