[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
{{{PACKAGE}}} = ["*.py"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[project]
name = "{{{PACKAGE}}}"
version = "0.0.0"
description = "{{{PACKAGE_DESCRIPTION}}}"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
keywords = ["github","python","{{{PACKAGE}}}"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]
dynamic=["dependencies"]

[project.urls]
Homepage = "https://github.com/eudoxys/{{{PACKAGE}}}"
Documentation = "https://www.eudoxys.com/{{{PACKAGE}}}"
Repository = "https://github.com/eudoxys/{{{PACKAGE}}}.git"
Issues = "https://github.com/eudoxys/{{{PACKAGE}}}/issues"

[project.scripts]
{{{PACKAGE}}} = "{{{PACKAGE}}}.cli:main"
