[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
isodata = ["*.py"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[project]
name = "isodata"
version = "0.0.0"
description = "ISO data accessors"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
keywords = ["github","python","isodata"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]
dynamic=["dependencies"]

[project.urls]
Homepage = "https://github.com/eudoxys/isodata"
Documentation = "https://www.eudoxys.com/isodata"
Repository = "https://github.com/eudoxys/isodata.git"
Issues = "https://github.com/eudoxys/isodata/issues"

[project.scripts]
isodata = "isodata.cli:main"
